# Demi

./: .CLEANUP_SUMMARY.txt  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEMI_PERSONA.md  DOCKER_README.md  DOCUMENTATION.md  Dockerfile  INSTALL.md  LLM_FALLBACK_GUIDE.md  METRICS_REFERENCE_CARD.txt  PROGRESS_REPORT_SETUP.md  README.md  RESEARCH_INDEX.md  RESEARCH_SOURCES.md  SECURITY.md  SELF_EVOLUTION_RESEARCH_REPORT.md  SELF_EVOLUTION_ROADMAP.md  SELF_EVOLUTION_SUMMARY.md  TELEGRAM_IMPLEMENTATION_SUMMARY.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.archive/: CHECKLIST.md  METRICS_ARCHITECTURE.md  METRICS_GUIDE.md  METRICS_IMPLEMENTATION_SUMMARY.md  METRICS_INTEGRATION_COMPLETE.md  METRICS_QUICK_START.md  PROJECT_COMPLETE.md
.planning/: AUTO-RESUME.md  DISCORD_SETUP.md  PROJECT.md  PROJECT_POST.md  REQUIREMENTS.md  ROADMAP.md  SELF_IMPROVEMENT_SETUP.md  STATE.md  discord_reporter.py  gsd-config.json  setup_daily_reports.sh
android/: README.md  settings.gradle.kts
app/: .metadata  pubspec.yaml
data/: DEMI_PERSONA.md
docs/: GODDESS_VOICE_GUIDE.md  README.md
examples/: metrics_integration_examples.py
flutter_app/: .gitignore  README.md  SETUP.md  pubspec.yaml
scripts/: apply_pending_improvements.py  discord_webhook.py  download_piper_voices.sh  profile_memory.sh  progress_report.sh  run_stability_test.sh  setup_autopush.sh  setup_goddess_voice.sh  start_dashboard.sh  test_tts.py  trigger_self_improvement.py  vrm_to_glb.py
server/: pyproject.toml
src/: __init__.py
tests/: test_android_autonomy.py  test_voice.py  (+21 more)
(+349 files in other folders)
